・縦画面固定対応 ・アルファベット大文字固定をやめる対応 ・アーティストの曲一覧をソートする対応

--- a/app/src/main/res/layout/general_button.xml
+++ b/app/src/main/res/layout/general_button.xml
@@ -9,4 +9,5 @@
     android:insetBottom="0dp"
     android:orientation="vertical"
     android:textSize="15sp"
+    android:textAllCaps="false"
     app:cornerRadius="@dimen/corner_0dp" />
