--- a/app/src/main/res/layout/activity_select_albumnumber.xml
+++ b/app/src/main/res/layout/activity_select_albumnumber.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectAlbumNuberActibity">
+    tools:context=".SelectAlbumNumberActibity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,4 +36,12 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:contentDescription="TODO" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
